--- a/js/package.json
+++ b/js/package.json
@@ -14,16 +14,18 @@
     "del": "^1.2.0",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
-    "gulp-jshint": "^1.11.2",
     "gulp-ng-annotate": "^1.1.0",
     "gulp-phpunit": "^0.8.1",
     "gulp-sourcemaps": "^1.5.2",
+    "gulp-tslint": "^3.1.2",
+    "gulp-typescript": "^2.8.0",
     "gulp-uglify": "^1.2.0",
     "gulp-wrap": "^0.11.0",
     "jshint-stylish": "^2.0.1",
     "karma": "^0.13.3",
     "karma-firefox-launcher": "^0.1.6",
-    "karma-jasmine": "^0.3.6"
+    "karma-jasmine": "^0.3.6",
+    "typescript": "^1.5.3"
   },
   "engine": "node >= 0.8",
   "scripts": {
