--- a/js/package.json
+++ b/js/package.json
@@ -12,20 +12,26 @@
   "dependencies": {},
   "devDependencies": {
     "del": "^1.2.0",
+    "bower": "^1.8.4",
     "gulp": "^3.9.0",
+    "gulp-cli": "^2.0.1",
     "gulp-concat": "^2.6.0",
     "gulp-jshint": "^1.11.2",
     "gulp-ng-annotate": "^1.1.0",
     "gulp-phpunit": "^0.8.1",
+    "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
     "gulp-wrap": "^0.11.0",
     "jshint-stylish": "^2.0.1",
+    "jasmine-core": "^3.1.0",
     "karma": "^0.13.3",
     "karma-firefox-launcher": "^0.1.6",
     "karma-jasmine": "^0.3.6"
   },
   "engine": "node >= 0.8",
   "scripts": {
-    "test": "gulp test-all"
+    "prebuild": "npm install && node_modules/bower/bin/bower install && node_modules/bower/bin/bower update",
+    "build": "node node_modules/gulp-cli/bin/gulp.js",
+    "test": "node node_modules/gulp-cli/bin/gulp.js test"
   }
 }
