--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: php
 php:
-  - 7.1
   - 7.2
 
 env:
@@ -13,39 +12,10 @@ env:
 branches:
   only:
     - master
-    - /^stable\d*$/
-
-before_install:
-  - export DISPLAY=:99.0
-  - export CHROME_BIN=chromium-browser
-  - sh -e /etc/init.d/xvfb start
-  - sudo apt-get update
-  - sudo apt-get install firefox
-  - wget https://raw.githubusercontent.com/owncloud/administration/master/travis-ci/before_install.sh
-  - bash ./before_install.sh $APP_NAME $CORE_BRANCH $DB
-  - cd ../core
-  - php occ app:enable notes
 
 script:
-  # Test lint
-  - cd apps/$APP_NAME
-  - ../../build/composer.phar install
-  - vendor/bin/parallel-lint  --exclude vendor .
-  - vendor/bin/php-cs-fixer fix --allow-risky yes --dry-run -v --diff --diff-format udiff
-  - phpunit --coverage-clover clover.xml -c phpunit.xml
-  - phpunit -c phpunit.integration.xml
-  - bash <(curl -s https://codecov.io/bash)
-
-# execute js tests
-  - make
-  - cd js && npm run test
+# do nothing - testing has been moved to drone
+  - pwd
 
 matrix:
-  include:
-    - php: 7.1
-      env: DB=sqlite
-    - php: 7.1
-      env: DB=pgsql
-    - php: 7.0
-      env: "DB=mysql CORE_BRANCH=stable10"
   fast_finish: true
