--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
+    "name": "owncloud/notes",
     "config" : {
-        "optimize-autoloader": true,
         "platform": {
             "php": "7.0.8"
         }
@@ -9,7 +9,11 @@
         "php": ">=7.0.8"
     },
     "require-dev": {
-        "owncloud/coding-standard": "^1.0",
-        "jakub-onderka/php-parallel-lint": "^1.0"
+        "bamarni/composer-bin-plugin": "^1.2"
+    },
+    "extra": {
+        "bamarni-bin": {
+            "bin-links": false
+        }
     }
 }
