--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,9 @@ build
 .php_cs.cache
 
 # Composer
-vendor/
-vendor-bin/**/vendor
-vendor-bin/**/composer.lock
+/vendor/
+/vendor-bin/**/vendor
+/vendor-bin/**/composer.lock
 
 # Tests - auto-generated files
 /tests/acceptance/output*
