Fixed URL to be able to have multiple apps on the same domain

--- a/img/manifest.json
+++ b/img/manifest.json
@@ -1,6 +1,6 @@
 {
 	"name": "Notes",
-	"start_url": "../../../apps/notes",
+	"start_url": "../../../apps/notes/#/",
 	"icons": [
 		{
 			"src": "./favicon-touch.png",
